--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,7 +29,7 @@ repos:
     rev: 2.3.54
     hooks:
       - id: editorconfig-checker
-        exclude: ^(LICENSE)
+        exclude: ^(LICENSE|(.*.po)|(.*.mo))
 
   - repo: https://github.com/asottile/pyupgrade
     rev: v2.29.1
