--- a/tox.ini
+++ b/tox.ini
@@ -30,5 +30,5 @@ install_command = python -m pip install -U {opts} {packages}
 
 commands=
     coverage run runtests.py afat -v 2
-    coverage report
+    coverage report -m
     coverage xml
