--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,7 @@ packages = find:
 install_requires =
     allianceauth>=2.11.0
     allianceauth-app-utils>=1.12.0
-    django-esi>=4.0.0a1
+    django-esi>=3.0.1
     unidecode>=1.3.3
 python_requires = ~=3.7
 include_package_data = True
