--- a/setup.cfg
+++ b/setup.cfg
@@ -38,7 +38,7 @@ project_urls =
     Changelog = https://github.com/ppfeufer/allianceauth-afat/blob/master/CHANGELOG.md
 
 [options]
-packages = find:
+packages = find_namespace:
 install_requires =
     allianceauth>=2.14.0
     allianceauth-app-utils>=1.12.0
@@ -48,4 +48,7 @@ include_package_data = True
 zip_safe = False
 
 [options.packages.find]
-include = afat
+include = afat*
+
+[options.package_data]
+* = *
