--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,7 +45,7 @@ repos:
       - id: editorconfig-checker
         exclude: |
           (?x)(
-            LICENSE
+            LICENSE|
             .po|
             .mo
           )
