--- a/.github/workflows/automated-checks.yml
+++ b/.github/workflows/automated-checks.yml
@@ -266,10 +266,10 @@ jobs:
         uses: actions/checkout@main
 
       # Minimum supported Python version by AllianceAuth
-      - name: Set up Python 3.8
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: '3.10'
 
       - name: Install Tools
         run: |
