--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,53 @@
 [build-system]
-requires = [
-    "setuptools>=42",
-    "wheel"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project]
+name = "allianceauth-afat"
+dynamic = ["version"]
+description = "Another Fleet Activity Tracking tool for Alliance Auth"
+readme = "README.md"
+license = "GPL-3.0"
+requires-python = "~=3.8"
+authors = [
+    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
 ]
-build-backend = "setuptools.build_meta"
+keywords = [
+    "allianceauth",
+    "eveonline",
+    "template",
+    "theme",
+]
+classifiers = [
+    "Environment :: Web Environment",
+    "Framework :: Django",
+    "Framework :: Django :: 4.0",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Topic :: Internet :: WWW/HTTP",
+    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
+]
+dependencies = [
+    "allianceauth-app-utils>=1.14.1",
+    "allianceauth>=3.2.0",
+    "unidecode>=1.3.4",
+]
+
+[project.urls]
+Changelog = "https://github.com/ppfeufer/allianceauth-afat/blob/master/CHANGELOG.md"
+"Issue / Bug Reports" = "https://github.com/ppfeufer/allianceauth-afat/issues"
+
+[tool.hatch.version]
+path = "afat/__init__.py"
+
+[tool.hatch.build]
+include = [
+    "/afat",
+]
