[FIX] [project.urls] section

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,6 @@ build-backend = "hatchling.build"
 
 [project]
 name = "allianceauth-afat"
-homepage = "https://github.com/ppfeufer/allianceauth-afat"
-repository = "https://github.com/ppfeufer/allianceauth-afat"
 dynamic = ["version"]
 description = "Another Fleet Activity Tracking tool for Alliance Auth"
 readme = "README.md"
@@ -43,8 +41,11 @@ dependencies = [
 ]
 
 [project.urls]
-"Changelog" = "https://github.com/ppfeufer/allianceauth-afat/blob/master/CHANGELOG.md"
-"Issue / Bug Reports" = "https://github.com/ppfeufer/allianceauth-afat/issues"
+Homepage = "https://github.com/ppfeufer/allianceauth-afat"
+Documentation = "https://github.com/ppfeufer/allianceauth-afat/blob/master/README.md"
+Source = "https://github.com/ppfeufer/allianceauth-afat.git"
+Changelog = "https://github.com/ppfeufer/allianceauth-afat/blob/master/CHANGELOG.md"
+Tracker = "https://github.com/ppfeufer/allianceauth-afat/issues"
 
 [tool.hatch.version]
 path = "afat/__init__.py"
