--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,25 @@
 [build-system]
-requires = ["hatchling"]
 build-backend = "hatchling.build"
+requires = [
+    "hatchling",
+]
 
 [project]
 name = "allianceauth-afat"
 version = "2.12.2"
 description = "Another Fleet Activity Tracking tool for Alliance Auth"
 readme = "README.md"
-license = "GPL-3.0"
-requires-python = "~=3.8"
-authors = [
-    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
-]
 keywords = [
     "allianceauth",
     "eveonline",
     "template",
     "theme",
 ]
+license = {file = "LICENSE"}
+authors = [
+    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
+]
+requires-python = "~=3.8"
 classifiers = [
     "Environment :: Web Environment",
     "Framework :: Django",
@@ -35,16 +37,16 @@ classifiers = [
     "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
 ]
 dependencies = [
+    "allianceauth>=3.2",
     "allianceauth-app-utils>=1.14.1",
-    "allianceauth>=3.2.0",
     "unidecode>=1.3.4",
 ]
-
 [project.urls]
-Homepage = "https://github.com/ppfeufer/allianceauth-afat"
-Documentation = "https://github.com/ppfeufer/allianceauth-afat/blob/master/README.md"
-Source = "https://github.com/ppfeufer/allianceauth-afat.git"
 Changelog = "https://github.com/ppfeufer/allianceauth-afat/blob/master/CHANGELOG.md"
+Documentation = "https://github.com/ppfeufer/allianceauth-afat/blob/master/README.md"
+Donations = "https://ko-fi.com/ppfeufer"
+Homepage = "https://github.com/ppfeufer/allianceauth-afat"
+Source = "https://github.com/ppfeufer/allianceauth-afat.git"
 Tracker = "https://github.com/ppfeufer/allianceauth-afat/issues"
 
 [tool.hatch.build]
