--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,11 @@ dependencies = [
     "allianceauth-app-utils>=1.14.1",
     "unidecode>=1.3.4",
 ]
+[project.optional-dependencies]
+tests-allianceauth-stable = [
+    "coverage",
+    "django-webtest",
+]
 [project.urls]
 Changelog = "https://github.com/ppfeufer/allianceauth-afat/blob/master/CHANGELOG.md"
 Documentation = "https://github.com/ppfeufer/allianceauth-afat/blob/master/README.md"
