--- a/.github/workflows/automated-checks.yml
+++ b/.github/workflows/automated-checks.yml
@@ -122,7 +122,7 @@ jobs:
             }}
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-${{ github.event_name }}-${{ github.sha }}
+          name: coverage-py${{ matrix.python-version }}-${{ matrix.database }}-${{ github.event_name }}-${{ github.sha }}
           path: coverage.xml
           if-no-files-found: ignore
 
