--- a/.github/workflows/automated-checks.yml
+++ b/.github/workflows/automated-checks.yml
@@ -117,12 +117,13 @@ jobs:
               ) &&
               (
                 matrix.python-version == '3.10' &&
+                matrix.database == 'mariadb:10.11' &&
                 matrix.django-version == '4.0'
               )
             }}
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-py${{ matrix.python-version }}-${{ matrix.database }}-${{ github.event_name }}-${{ github.sha }}
+          name: coverage-${{ github.event_name }}-${{ github.sha }}
           path: coverage.xml
           if-no-files-found: ignore
 
