[MISC] Update Python version file reference in automated-checks.yml
The commit updates the reference to the Python version file in the automated-checks.yml workflow. Instead of reading the python version from 'pyproject.toml', it now reads it from the 'pyproject.toml' file.

--- a/.github/workflows/automated-checks.yml
+++ b/.github/workflows/automated-checks.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version-file: 'pyproject.toml' # Read python version from a file pyproject.toml
+          python-version-file: 'pyproject.toml' # Read the Python version from the pyproject.toml file
 
       - name: Run Pre Commit Checks
         uses: pre-commit/action@v3.0.0
