--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,6 @@ requires = [
 
 [project]
 name = "allianceauth-afat"
-version = "2.13.0"
 description = "Another Fleet Activity Tracking tool for Alliance Auth"
 readme = "README.md"
 keywords = [
@@ -36,8 +35,11 @@ classifiers = [
     "Topic :: Internet :: WWW/HTTP",
     "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
 ]
+dynamic = [
+    "version",
+]
 dependencies = [
-    "allianceauth>=4.0.0b1",
+    "allianceauth>=4.0.0b2",
     "allianceauth-app-utils>=1.14.1",
     "unidecode>=1.3.4",
 ]
@@ -58,3 +60,6 @@ Tracker = "https://github.com/ppfeufer/allianceauth-afat/issues"
 include = [
     "/afat",
 ]
+
+[tool.hatch.version]
+path = "afat/__init__.py"
