--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dynamic = [
     "version",
 ]
 dependencies = [
-    "allianceauth>=4.0.0b2",
+    "allianceauth<5.0.0,>=4",
     "allianceauth-app-utils>=1.14.1",
     "unidecode>=1.3.4",
 ]
