--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ dependencies = [
 optional-dependencies.tests-allianceauth-latest = [
     "coverage",
     "django-webtest",
+    "fittings",
 ]
 urls.Changelog = "https://github.com/ppfeufer/allianceauth-afat/blob/master/CHANGELOG.md"
 urls.Documentation = "https://github.com/ppfeufer/allianceauth-afat/blob/master/README.md"
