--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ dependencies = [
     "unidecode>=1.3.4",
 ]
 optional-dependencies.tests-allianceauth-latest = [
+    "allianceauth-securegroups",
     "coverage",
     "django-webtest",
     "fittings",
