--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dynamic = [
 dependencies = [
     "allianceauth>=4.6,<5",
     "allianceauth-app-utils>=1.14.1",
+    "django-esi>=7.0.1",
     "django-eveuniverse>=1.5.7",
     "unidecode>=1.3.4",
 ]
