--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,14 +11,16 @@ readme = "README.md"
 keywords = [
     "allianceauth",
     "eveonline",
-    "template",
-    "theme",
+    "fleet",
+    "fleet-activity",
+    "fleet-tracking",
+    "tracking",
 ]
 license = { file = "LICENSE" }
 authors = [
     { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
 ]
-requires-python = ">=3.10"
+requires-python = ">=3.10,<3.14"
 classifiers = [
     "Environment :: Web Environment",
     "Framework :: Django",
