--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ dynamic = [
 ]
 dependencies = [
     "allianceauth>=4.12,<5",
-    "django-esi>=8,<9",
+    "django-esi>=8.3.1",
     "django-eveonline-sde>=0.0.1b1",
     "unidecode>=1.3.4",
 ]
