--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ dynamic = [
     "version",
 ]
 dependencies = [
-    "allianceauth>=4.12,<5",
+    "allianceauth>=4.12",
     "django-esi>=8.3.1",
     "django-eveonline-sde>=0.0.1b1",
     "unidecode>=1.3.4",
